<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    
     <item
        android:id="@+id/action_bookmark"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_bookmark"
        android:title="@string/bookmark"/>
     
    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"/>
    
    <item
        android:id="@+id/action_reload_article"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_reload"
        android:title="@string/reload_article"/>
    
   <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_settings"/>


</menu>